# LightGate

./: CMakeLists.txt  LICENSE  README.md  config.txt  main.cpp
include/: ByteToString.h  ChecksumChecker.h  ConfigReader.h  JsonFormatter.h  MQTTclient.h  Packager.h  StreamReader.h  mosquitto.h
src/: ByteToString.cpp  ChecksumChecker.cpp  ConfigReader.cpp  JsonFormatter.cpp  MQTTclient.cpp  Packager.cpp  StreamReader.cpp
